--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,14 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+              Email:</br>
+              Home:</br>
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+              <a href="mailto://larryzju@163.com">larryzju@163.com</a></br>
+              <a href="http://larryzju.github.io">larryzju.github.io</a></br>
               </p>
             </div>
           </div>
