--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     {% endif %}
   </a>
 
-  <h2><a href="/">{{ site.data.theme.name }}</a></h2>
+  <h2>{{ site.data.theme.name }}</h2>
 
   <div id="links">
     {% include links.html %}
