--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -4,9 +4,11 @@
 <ul>
   {% for tag in sorted_tags %}
   <li>
-    <a href="{{ '/tag/' | append:tag[0] }}.html" rel="tag">
+    <a href="{{ '/tags.html#' | append:tag[0] }}" rel="tag">
       <span class="tag-id">{{tag[0]}}</span>
+      <!--
       <span class="tag-count">{{tag[1].size}}</span>
+      -->
     </a>
   </li>
   {% endfor %}
