--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,18 +25,18 @@ layout: default
     {% endfor %}
   </ul>
 
-  <h3>Tags :</h3>
+  <h3>Tags</h3>
   <span>
     {% for tag in page.tags %}
-      <a href="{{ '/tag/' | append:tag }}.html" rel="tag"> 
+      <a href="{{ '/tags.html#' | append:tag }}" rel="tag"> 
          {{ tag }} 
         {% if forloop.last %}
-        .
         {% else %}
           ,
         {% endif %}
       </a>
-{% unless forloop.last %}{% endunless %}{% endfor %}
+    {% unless forloop.last %}{% endunless %}
+    {% endfor %}
   </span>
 </div>
 
